--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "nodejs-hello-world",
-  "version": "1.0.0",
+  "name": "rai-hello1971",
+  "version": "1.1.0",
   "description": "Hello World sample app",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fhinkel/nodejs-hello-world.git"
+  "dependencies": {
+    "io-functions-commons": "^4.0.1"
   },
-  "author": "fhinkel",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fhinkel/nodejs-hello-world/issues"
+  "devDependencies": {
+    "release-it": "^12.4.3"
   },
-  "homepage": "https://github.com/fhinkel/nodejs-hello-world#readme"
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
+  },
+  "author": "rai",
+  "license": "MIT"
 }
