--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "https://npm.pkg.github.com"
   },
   "author": "rai",
   "license": "MIT"
